Fix navigate back icon on smaller devices

--- a/_sass/components/_masthead.scss
+++ b/_sass/components/_masthead.scss
@@ -24,6 +24,10 @@
     left: -6rem;
     top: 50%;
     margin-top: calc(-48px / 2);
+    @media screen and (max-width: 480px) {
+      left: 20px;
+      top: -25px;
+    }
   }
   .intro {
     font-weight: 300;
